[mihik:feat:added tests and renamed some files]